# NHI

./: .gitignore  1.md  CORS_CONFIGURATION.md  Cargo.toml  DEMO_GUIDE.md  HTTP_API_DOCUMENTATION.md  HTTP_API_SUMMARY.md  Makefile  README.md  build.rs  setup.sh  start_demo.sh  stop_demo.sh
examples/: simple_counter
logs/: nhi.log.2025-07-02
src/: cli.rs  cluster_state.rs  colors.rs  criu_manager.rs  daemon_wrapper.c  distributed_registry.rs  http_api.rs  instance.rs  logger.rs  main.rs  message_protocol.rs  migration_executor.rs  migration_manager.rs  network_manager.rs  node_discovery.rs  node_manager.rs  output.rs  process_manager.rs  shadow_instance_manager.rs  shadow_manager.rs  streaming_manager.rs  tty_utils.rs  types.rs  ui.rs
