[package]
name = "nhi"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
rustyline = "14.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
nix = { version = "0.27", features = ["signal", "process"] }
crossterm = "0.27"
colored = "2.0"

# Networking dependencies for Stage 2
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
bytes = "1.0"
bincode = "1.3"
flate2 = "1.0"
tar = "0.4"

# CRIU integration
rust-criu = { path = "deps/rust-criu" }
criu-image-streamer = { path = "deps/criu-image-streamer" }

[dev-dependencies]
tempfile = "3.0"
